[package]
name = "epoch-get"
version = "0.1.1"
edition = "2021"
authors = ["Tobias <sandalbanditten@tutanota.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sandalbanditten/epoch-get"
description = """
A simple program to get the current time since the Unix Epoch.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
